<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".promotion"
    tools:deviceIds="wear">



    <TextView
        android:id="@+id/texttile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="150dp"
        android:text="change pawn to"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        />

    <RadioGroup
        android:id="@+id/chesschoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="200dp"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queen"
            android:id="@+id/queen"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rook"
            android:id="@+id/rook" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bishop"
            android:id="@+id/bishop" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/knight"
            android:id="@+id/knight" />

    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:onClick="cancel"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="400dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commit"
        android:id="@+id/commit"
        android:onClick="commit"
        android:layout_marginLeft="180dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="400dp"
        />


</androidx.wear.widget.BoxInsetLayout>