<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/vertical"
    android:paddingLeft="@dimen/horizontal"
    android:paddingRight="@dimen/horizontal"
    android:paddingTop="@dimen/vertical"
    android:gravity="center"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text"
        android:textSize="@dimen/title"
        android:textColorHighlight="@color/Pink"
        android:textStyle="bold"
        android:textColor="@color/CadetBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playNew"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/playNew"
        android:backgroundTint="@color/LightSkyBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        android:text="@string/play"
        android:onClick="playNew" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/DodgerBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playNew"
        android:layout_marginBottom="100dp"
        android:text="@string/replay"
        android:onClick="replayGame" />

</androidx.constraintlayout.widget.ConstraintLayout>